--- a/draftapp-client/src/style.css
+++ b/draftapp-client/src/style.css
@@ -24,10 +24,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 100%
 }
 
 h1 {
@@ -59,7 +57,7 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
